<resources>
    <string name="app_name">Project3</string>
    <string name="teks_proyek_2">PROYEK 2</string>
    <string name="todo">TODO</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnlogin">Login</string>
    <string name="btnregister">Register</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="alamat_tinggal">Alamat Tinggal</string>
    <string name="keluar">Keluar</string>
    <string name="simpan">Simpan</string>
</resources>