<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="28dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="285dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo_kominfo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/masukkan_username"
        android:textSize="14sp"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/masukkan_password"
        android:importantForAutofill="no"
        android:textSize="14sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/btnlogin" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/btnregister" />

</LinearLayout>