<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvUsernameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUserR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/masukkan_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPasswordR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="Masukkan Email"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="Masukkan Nama Lengkap"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAsalSekolah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/etNamaSekolah"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="Masukkan Asal Sekolah"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/alamat_tinggal" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="Masukkan Alamat"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/simpan" />
    </LinearLayout>

</ScrollView>